# ymca

./: Makefile  README.md  pyproject.toml
mcpha_osc/: speedtest.py
mcpha_osc_testing-scripts/: get_scope_snapshot.py  minimal_qt_based_program.py  osc.py
norb/: README.md  norb_log.py
scpi_tests/: scpi_snapshot.py  speedtest.py
src/ymca/: __init__.py  deleteme_norb.py  osc.py
